# duckdb-claude-ext

./: .copilot-instructions.md  .gitignore  Cargo.toml  Makefile  README.md  REPORT.md  main.py  pyproject.toml
.github/workflows/: MainDistributionPipeline.yml
claude_code_ext/: .gitignore  README.md
docs/: CLAUDE_FILE_SCHEMAS.md  CLAUDE_FILE_STRUCTURE.md  DUCKDB_EXTENSION_PATTERNS.md
examples/: explore.py
examples/explorer/: README.md  app.py  branding.py  db.py
examples/explorer/.streamlit/: config.toml
examples/explorer/pages/: 0_Overview.py  1_Session_Browser.py  2_SQL_Query.py
scripts/: analyze_structure.py  generate_test_data.py  smoke_test.sh  test.sh
src/: conversations.rs  detect.rs  history.rs  lib.rs  plans.rs  stats.rs  todos.rs  utils.rs  vtab.rs
src/types/: claude.rs  copilot.rs  mod.rs
test/data/: history.jsonl  stats-cache.json
test/data/plans/: binary-juggling-wolf.md  bright-napping-stream.md  bright-napping-wolf.md  (+1 more)
test/data_claude/: history.jsonl  stats-cache.json
test/data_copilot/: command-history-state.json  config.json
test/sql/: claude_conversations.test  claude_history.test  claude_plans.test  claude_stats.test  claude_todos.test  column_validation.test  copilot_conversations.test  copilot_history.test  copilot_plans.test  copilot_todos.test  cross_source.test  edge_cases.test  joins.test  test_benchmark.sql  test_conversations.sql  test_copilot_conversations.sql  test_copilot_history.sql  test_copilot_plans.sql  test_copilot_todos.sql  test_history.sql  test_joins.sql  test_plans.sql  test_stats.sql  test_todos.sql
(+50 files in other folders)
