[package]
name = "agent_data"
version = "0.1.0"
edition = "2021"
description = "DuckDB extension for reading agent/copilot data (Claude Code, Codex, GitHub Copilot)"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[dependencies]
duckdb = { version = "=1.4.4", features = ["loadable-extension"] }
libduckdb-sys = "=1.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
